BYO-CNI-AKS/sample-apps/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-demo
  labels:
    app.kubernetes.io/part-of: cilium-demo
